tests/urmoac/errors/net_issues/edge_length_0_patch/errors.urmoac
Warning: Edge '10000' has a length of 0. Will be set to 0.1 m.
Warning: Subsequent edges with length=0 will not be reported; use --write.net-errors or --net.report-all-errors to get the complete list.
